--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <title>Проект "Комменты"</title>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="shortcut icon" href="./assets/icon/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
@@ -65,5 +66,5 @@
     </div>
   </body>
 
-  <script src="./script.js"></script>
+  <script type="module" src="./js/index.js"></script>
 </html>
