добавлены элементы загрузки данных

--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
   </head>
 
   <body>
+    <!-- <div id="loading" class="loading-overlay">
+      <div class="loader">Загрузка</div> -->
+
+    </div>
     <div class="container">
       <ul id="list" class="comments">
+        <div class="loading-message">Подождите, идет загрузка комментариев...</div>
         <!-- <li class="comment">
           <div class="comment-header">
             <div class="title">Глеб Фокин</div>
@@ -63,6 +68,7 @@
           <button class="add-form-button" id="button">Написать</button>
         </div>
       </div>
+      <div class="comment-loaded comment loading-message">Подожите, добавляем коментарий...</div>
     </div>
   </body>
 
