--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
 
     </div>
     <div class="container">
+      <div id="clear-data"></div>
+      <div id="authorization" class="auth" >
+        <button class="auth__btn button btn--close">Вход</button>
+        <button class="reg__btn button btn--close">Регистрация</button>
+        <!-- <button class="all-users__btn button">Показать всех пользователей</button> -->
+      </div>
       <ul id="list" class="comments">
         <div class="loading-message">Подождите, идет загрузка комментариев...</div>
         <!-- <li class="comment">
@@ -50,13 +56,13 @@
           </div>
         </li> -->
       </ul>
-      <div class="add-form" id="name">
-        <input
+      <div class="add-form window-input" id="name">
+        <!-- <input
           id="input-name"
           type="text"
           class="add-form-name"
           placeholder="Введите ваше имя"
-        />
+        /> -->
         <textarea
           id="input-comment"
           type="textarea"
