--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
     <div class="container">
       <div id="clear-data"></div>
       <div id="authorization" class="auth" >
-        <button class="auth__btn button btn--close">Вход</button>
-        <button class="reg__btn button btn--close">Регистрация</button>
-        <!-- <button class="all-users__btn button">Показать всех пользователей</button> -->
+        <div class="auth__btn button btn--close" >Вход</div>
+        <div class="reg__btn button btn--close" >Регистрация</div>
+        <div class="exit__btn button btn--close">Выход</div>
+        <!-- <div class="all-users__btn button" >Показать всех пользователей</div> -->
       </div>
       <ul id="list" class="comments">
         <div class="loading-message">Подождите, идет загрузка комментариев...</div>
