добавление лайка работает штатно закрыты предыдущие вопросы с отображением блоков

--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
 
     </div>
     <div class="container">
-      <div id="clear-data"></div>
       <div id="authorization" class="auth" >
-        <div class="auth__btn button btn--close" >Вход</div>
+        <!-- <div class="auth__btn button btn--close" >Вход</div>
         <div class="reg__btn button btn--close" >Регистрация</div>
-        <div class="exit__btn button btn--close">Выход</div>
+        <div class="exit__btn button btn--close">Выход</div> -->
         <!-- <div class="all-users__btn button" >Показать всех пользователей</div> -->
       </div>
       <ul id="list" class="comments">
