дебаг, выполненный чеклист

--- a/index.html
+++ b/index.html
@@ -57,12 +57,14 @@
         </li> -->
       </ul>
       <div class="add-form window-input" id="name">
-        <!-- <input
+        <input
           id="input-name"
           type="text"
           class="add-form-name"
           placeholder="Введите ваше имя"
-        /> -->
+          value="Имя пользователя"
+          readonly
+        />
         <textarea
           id="input-comment"
           type="textarea"
